...
                                    <constraint firstAttribute="height" constant="1" id="8lH-f3-86O"/>
                                </constraints>
                            </view>
                            <textField opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to reverse" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4P6-AF-o7Q">
                                <rect key="frame" x="16" y="131" width="361" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="textFieldForReversing">
                                    <accessibilityTraits key="traits" none="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="aXP-IM-nq9"/>
                                </constraints>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <color key="backgroundColor" red="0.93338567019999996" green="0.93356442449999999" blue="0.93716341260000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="KZR-jy-6Yk"/>
                                </constraints>
                                <segments>
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                                <color key="selectedSegmentTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <action selector="switchModeSegmentedControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="8m9-fX-0dR"/>
                                </connections>
                            </segmentedControl>
...
                                    <constraint firstAttribute="height" constant="40" id="dwT-Cn-B0f"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignore" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LJ1-gP-JLD">
                                <rect key="frame" x="16" y="266" width="361" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Yng-v5-OUN"/>
                                </constraints>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            </label>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mVX-3P-00g">
                                <rect key="frame" x="16" y="381" width="361" height="40"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W8d-P3-lio">
                                        <rect key="frame" x="0.0" y="0.0" width="8" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="outputLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="fgI-JK-uQB"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
...
